fix: sidebar collapse toggle

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,20 @@
 @import '~antd/dist/antd.css';
 
-.ant-layout-sider {
-  background: white;
-  flex: 0 0 300px !important;
-  max-width: 300px !important;
-  min-width: 300px !important;
-  width: 300px !important;
-}
-
 .logo {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px;
 }
 
-.header-layout,
-.content-layout {
-  background: #fff;
+.ant-layout {
+  background-color: transparent;
+}
+
+.ant-layout-header {
+  background-color: transparent;
 }
 
 .content-layout {
-  margin: 24px 16px;
-  padding: 24px;
+  margin-left: 5px;
   min-height: 280px;
 }
